# nrf52840-mdk-rs

./: Cargo.toml  README.md
.cargo/: config
examples/: ble_bas_peripheral.rs  blinky.rs
src/: lib.rs
