[package]
authors = ["Wez Furlong <wez@wezfurlong.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Rust support for the nrf52840-mdk development board"
keywords = ["arm", "cortex-m", "nrf52840", "hal"]
license = "MIT OR Apache-2.0"
name = "nrf52840-mdk"
repository = "https://github.com/nrf-rs/nrf52840-mdk"
version = "0.0.1"
edition = "2018"

[dependencies]
nrf52840-hal = "0.12.0"
cortex-m-rt = "0.6.13"
cortex-m = "0.6.4"
embassy = { version = "0.1.0", git = "https://github.com/akiles/embassy", features = [
    "defmt"
] }
nrf-softdevice = { version = "0.1.0", git = "https://github.com/akiles/nrf-softdevice", features = [
    "defmt",
    "defmt-trace",
    "nrf52840",
    "s140",
    "ble-peripheral",
    "ble-central",
    "ble-gatt-server"
] }
defmt = "0.1.3"
nrf-softdevice-defmt-rtt = { version = "0.1.0", git = "https://github.com/akiles/nrf-softdevice" }

[dev-dependencies]
panic-probe = "0.1.0"
panic-halt = "0.2.0"

[patch.crates-io]
embassy = { version = "0.1.0", git = "https://github.com/akiles/embassy" }

# for cargo flash
[package.metadata]
chip = "nRF52840_xxAA"

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"
